Allow load of the chrome://chrome-signin in incognito profile

This CL allows to load the chrome://chrome-signin URL in incognito
profiles as this is used when unlocking the first time a profile.
This basically reverts the change https://codereview.chromium.org/2621083002/
for the chrome://chrome-signin URL as the assumption in that CL was
wrong.

BUG=681469

Review-Url: https://codereview.chromium.org/2637133002
Cr-Commit-Position: refs/heads/master@{#444107}

Former-commit-id: 5ec1c6df6c10a2eb6911dcf6aa01b5ffcfe6eabe